--- a/src/main/resources/templates/base_email.html
+++ b/src/main/resources/templates/base_email.html
@@ -33,7 +33,7 @@
         <table>
           <tr>
             <td align="center">
-              © 2019 SimplyHired
+              © <span th:if="${currentYear} != null" th:text="${currentYear}"></span> SimplyHireds
             </td>
           </tr>
           <tr>
