--- a/src/main/resources/templates/document_request_no_action.html
+++ b/src/main/resources/templates/document_request_no_action.html
@@ -25,7 +25,7 @@
                      alt="avatar" th:src="${senderAvatar}"/>
                 <div
                     th:if="${senderAvatar} == null"
-                    th:style="|background: ${backgroundColor}| + ';float:left;width:47px; height: 47px; vertical-align: -18px; border: 1px solid #dfe2e9; border-radius: 50%; margin-right: 14px;'"
+                    th:style="|background: ${backgroundColor}| + ';float:left; width:47px; height: 47px; vertical-align: -18px; border: 1px solid #dfe2e9; border-radius: 50%; margin-right: 14px; text-align:center; color:white; line-height:47px;'"
                     th:text="${avatarText}">
                 </div>
 
