--- a/src/main/resources/templates/document_request_signature.html
+++ b/src/main/resources/templates/document_request_signature.html
@@ -28,7 +28,7 @@
                 <img th:if="${senderAvatar}" style="width: 47px; height: 47px; vertical-align: -18px; border: 1px solid #dfe2e9; border-radius: 50%;margin-right: 14px;" alt="avatar" th:src="${senderAvatar}"/>
                 <div
                     th:if="${senderAvatar} == null"
-                    th:style="|background: ${backgroundColor}| + '; float:left; width: 47px;height: 47px; border-radius: 50%; color: white; text-align: center;vertical-align: middle;line-height: 47px;margin-right: 14px;'"
+                    th:style="|background: ${backgroundColor}| + '; float:left; width: 47px; height: 47px; border-radius: 50%; color: white; text-align: center;vertical-align: middle;line-height: 47px;margin-right: 14px; text-align:center; color:white; line-height:47px;'"
                     th:text="${avatarText}">
                 </div>
                 <span th:text="${senderName}" style="color: #0075DF;"></span>
