--- a/src/main/resources/templates/add_new_admin_email.html
+++ b/src/main/resources/templates/add_new_admin_email.html
@@ -17,7 +17,7 @@
       <td style="font-size: 16px; line-height: 24px;">
         <div style="word-wrap:break-word; word-break:break-all; overflow: hidden; margin: 20px auto 0 auto">
           <span style="font-weight: 600;" th:text="${promotedEmployeeName}"/>
-          has bean changed to an HRIS Admin by
+          has been changed to an HRIS Admin by
         </div>
         <div><span th:text="${promoterName}" /></div>
       </td>
