--- a/src/main/resources/templates/document_request_acknowledge.html
+++ b/src/main/resources/templates/document_request_acknowledge.html
@@ -29,7 +29,7 @@
           <tr>
             <td>
               <div class="card-title"
-                   style="margin: auto; width: fit-content; margin-bottom: 32px;line-height: 2;font-size: 14px; letter-spacing: 0.36px;">
+                   style="margin: auto; width: fit-content; margin-bottom: 32px;line-height: 46px;font-size: 14px; letter-spacing: 0.36px;width: -moz-fit-content;">
                 <img th:if="${senderAvatar}"
                      style="width:47px; height: 47px; vertical-align: -18px; border: 1px solid #dfe2e9; border-radius: 50%; margin-right: 12px;"
                      alt="avatar" th:src="${senderAvatar}"/>
