--- a/src/main/resources/templates/document_request_no_action.html
+++ b/src/main/resources/templates/document_request_no_action.html
@@ -19,7 +19,7 @@
           <tr>
             <td>
               <div class="card-title"
-                   style="margin: auto; height: auto; min-height: 45px; width: fit-content; margin-bottom: 20px;">
+                   style="margin: auto; height: auto; min-height: 45px; width: fit-content; margin-bottom: 20px;line-height: 46px;width: -moz-fit-content;">
                 <img th:if="${senderAvatar}"
                      style="width: 47px;height: 47px; vertical-align: -18px; border: 1px solid #dfe2e9; border-radius: 50%; margin-right: 14px;"
                      alt="avatar" th:src="${senderAvatar}"/>
