--- a/src/main/resources/templates/employee_invitation_email.html
+++ b/src/main/resources/templates/employee_invitation_email.html
@@ -6,14 +6,16 @@
   <title th:text="'Welcome to ' + ${companyName} + '!'"></title>
 </head>
 <body>
-<div align="center" style="background-color: #f0f2f5; padding-bottom: 119px; padding-top: 58px; width: 100%;">
+<div align="center"
+     style="background-color: #f0f2f5; padding-bottom: 119px; padding-top: 58px; width: 100%;">
   <table style="width: 600px; min-height: 459px; border-collapse: collapse;">
     <tbody>
     <tr>
       <td style="padding-top: 30px; height: 44px; padding-bottom: 30px; text-align: center;">
         <img
             style="width: 202px; height: 37px; margin-left: auto; margin-right: auto; display: block;"
-            alt="logo" title="logo" th:src="@{${frontEndAddress} + 'image/FullWidthSimplyHiredLogo.png'}">
+            alt="logo" title="logo"
+            th:src="@{${frontEndAddress} + 'image/FullWidthSimplyHiredLogo.png'}">
       </td>
     </tr>
     <tr style="width: 600px; height: 385px;">
@@ -25,7 +27,8 @@
               <table style="width: 100%;height: 100%; border-collapse: collapse;">
                 <tbody>
                 <tr>
-                  <td th:text="'Welcome to ' + ${companyName} + '!'" style="padding-top: 47px; font-size: 24px; width: 355px; height: 28px; text-align: center;">
+                  <td th:text="'Welcome to ' + ${companyName} + '!'"
+                      style="padding-top: 47px; font-size: 24px; width: 355px; height: 28px; text-align: center;">
                   </td>
                 </tr>
                 <tr>
@@ -34,9 +37,11 @@
                   </td>
                 </tr>
                 <tr>
-                  <td th:switch="${createPasswordAddress}" style="padding-top: 33px; height: 40px; text-align: center; padding-bottom: 47px;">
+                  <td th:switch="${createPasswordAddress}"
+                      style="padding-top: 33px; height: 40px; text-align: center; padding-bottom: 47px;">
                     <div th:case="'#'"
-                         style="background-color: #0075DF; color: #ffffff; outline: none; box-shadow: none; border: 0; width: 153px; height: 40px; font-size: 14px; border-radius: 400px; display: inline-block; line-height: 42px; text-decoration: none">Get
+                         style="background-color: #0075DF; color: #ffffff; outline: none; box-shadow: none; border: 0; width: 153px; height: 40px; font-size: 14px; border-radius: 400px; display: inline-block; line-height: 42px; text-decoration: none">
+                      Get
                       Started
                     </div>
                     <a th:case="*" th:href="@{${createPasswordAddress}}"
@@ -49,7 +54,7 @@
           </tr>
           <tr style="width: 100%; background-color: #f7f8fa; padding: 1px;">
             <td>
-              <table style="font-size: 14px; color: #7b7e84; height: 100%;">
+              <table style="font-size: 14px; color: #7b7e84; height: 100%; width: 100%;">
                 <tbody>
                 <tr>
                   <td style="padding: 15px 35px 15px 35px; max-width: 600px; height: auto; word-break: break-word;"
