--- a/src/main/resources/templates/attendance_notification.html
+++ b/src/main/resources/templates/attendance_notification.html
@@ -17,18 +17,18 @@
     <table style="background-color: #FFFFFF; padding: 20px;width: 600px; margin-left: auto; margin-right: auto;">
         <tr>
             <td style="font-size: 24px; line-height: 1.38; color: #2e3033; text-align: center; padding-top: 10px; padding-bottom: 20px;">
-                You have hours pending approval
+                <span th:text="${subjectText}"></span>
             </td>
         </tr>
         <tr>
             <td style="font-size: 16px; line-height: 1.38; color: #7b7e84; text-align: center;">
-                <span>Your company attendance hours need to be approved and submitted within the next 8 hours</span>
+                <span th:text="${contentText}"></span>
             </td>
         </tr>
         <tr>
             <td style="display: block; margin: 20px auto 10px auto; width: 100%;">
                 <a style="text-decoration: none; padding: 10px 20px; border-radius: 20px; background: #0075DF; border: 1px solid transparent;cursor: pointer; display: block; width: 190px; margin-left: auto; margin-right: auto;font-size: 14px; font-weight: 500; line-height: 1.17; letter-spacing: .2px; color: #ffffff; text-align: center;"
-                   th:href="@{${frontEndAddress} + 'attendance/my-hours'}">Review Attendance Hours
+                   th:href="@{${frontEndAddress} + 'attendance/team-hours'}"><span th:text="${buttonText}"></span>
                 </a>
             </td>
         </tr>
